--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,15 +10,9 @@
             {{ with .Site.Params.inc.twitter }}
             <a href="https://twitter.com/{{ . }}" title="Follow on Twitter" target="_blank"><i class="icon icon-twitter"></i></a>
             {{ end }}
-            {{ with .Site.Params.inc.github }}
-            <a href="https://github.com/{{ . }}" title="Follow on Github" target="_blank"><i class="icon icon-github"></i></a>
-            {{ end }}
             {{ with .Site.Params.inc.facebook }}
             <a href="http://facebook.com/{{ . }}" title="Like on Facebook" target="_blank"><i class="icon icon-facebook"></i></a>
             {{ end }}
-            <a href="/index.xml" title="RSS Feed">
-                <i class="icon icon-rss"></i>
-            </a>
         </div>
     </section>
 </div>
@@ -30,6 +24,6 @@
   {{ end }}
 </article>
 <section class="pagination" style="text-align:center">
-  <a href="/post/" class="btn btn-outline">Archives</a>
+  <a href="/blog/" class="btn btn-outline">Archives</a>
 </section>
 {{ partial "footer.html" . }}
