--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,8 @@
 <footer class="site-footer">
     <div class="container">
         <nav>
-            <a href="{{ .Site.Params.inc.url }}">{{ .Site.Params.inc.company }}</a> &middot;
-            <a href="/">Blog</a> &middot;
-            {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Posts</a> &middot; {{ end }}
+            <a href="/">{{ .Site.Params.inc.company }}</a> &middot;
+            {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Blog</a> &middot; {{ end }}
             {{ with .Site.Params.inc.about_link }}<a href="{{ . }}">About</a>{{ end }}
         </nav>
         
