--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,8 +24,7 @@
             <a class="brand" href="/">
                 <img src="/images/{{ .Site.Params.inc.logo }}" alt="Inc">
             </a>
-            <a href="/" class="home">{{ .Site.Title }}</a>
-            {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Posts</a>{{ end }}
+            {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Blog</a>{{ end }}
             {{ with .Site.Params.inc.about_link }}<a href="{{ . }}">About</a>{{ end }}
         </nav>
         <nav class="tagline">
