Added the portfolio

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,6 +25,7 @@
                 <img src="/images/{{ .Site.Params.inc.logo }}" alt="Inc">
             </a>
             {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Blog</a>{{ end }}
+            {{ with .Site.Params.inc.portfolio_link }}<a href="{{ . }}">Portfolio</a>{{ end }}
             {{ with .Site.Params.inc.about_link }}<a href="{{ . }}">About</a>{{ end }}
         </nav>
         <nav class="tagline">
