--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,7 @@
         <nav>
             <a href="/">{{ .Site.Params.inc.company }}</a> &middot;
             {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Blog</a> &middot; {{ end }}
+            {{ with .Site.Params.inc.portfolio_link }}<a href="{{ . }}">Portfolio</a> &middot; {{ end }}
             {{ with .Site.Params.inc.about_link }}<a href="{{ . }}">About</a>{{ end }}
         </nav>
         
