Adds Contact Form Page

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,6 +25,7 @@
             {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Blog</a>{{ end }}
             {{ with .Site.Params.inc.portfolio_link }}<a href="{{ . }}">Portfolio</a>{{ end }}
             {{ with .Site.Params.inc.about_link }}<a href="{{ . }}">About</a>{{ end }}
+            {{ with .Site.Params.inc.contact_link }}<a href="{{ . }}">Contact</a>{{ end }}
         </nav>
         <nav class="tagline">
             {{ with .Site.Params.inc.tagline }}<span>{{ . }}</span>{{ end }}
