Footer And Home Icon Changes

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,7 @@
 <footer class="site-footer">
-    <div class="container">
+  <!--    <div class="container">
+
+ 
         <nav>
             <a href="/">{{ .Site.Params.inc.company }}</a> &middot;
             {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Blog</a> &middot; {{ end }}
@@ -15,7 +17,9 @@
             <a href="http://facebook.com/{{ . }}" title="Follow on Facebook" target="_blank"><i class="icon icon-facebook black"></i></a>
             {{ end }}    
         </nav>
+
     </div>
+    -->
 </footer>
 {{ partial "_scripts.html" . }}
 
