--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,6 @@
 {{ partial "header.html" . }}
-
+<div class="site-index-top-spacer">
+</div>
 <div class="blog-cover" style="background-image:url(/images/{{ .Site.Params.inc.cover_image }});">
     
     <section>
