--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,6 +6,7 @@
     <title>{{ .Site.Params.inc.title }} &mdash; {{ .Site.Params.inc.subtitle }}</title>
     {{ with .Site.Params.inc.google_font }}<link href="https://fonts.googleapis.com/css?family={{ . }}" rel="stylesheet" type="text/css">{{ end }}
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/paige.css">
     <link rel="stylesheet" href="/css/lightbox.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" >
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -23,6 +24,7 @@
 <section class="site-nav">
     <header>
         <nav id="navigation">
+            <a href="/"><img src="images/home.png"></a>
             {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Blog</a>{{ end }}
             {{ with .Site.Params.inc.portfolio_link }}<a href="{{ . }}">Portfolio</a>{{ end }}
             {{ with .Site.Params.inc.about_link }}<a href="{{ . }}">About</a>{{ end }}
