--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,7 +24,7 @@
 <section class="site-nav">
     <header>
         <nav id="navigation">
-            <a href="/"><img src="images/home.png"></a>
+            <a href="/"><img src="/images/home.png"></a>
             {{ with .Site.Params.inc.product_link }}<a href="{{ . }}">Blog</a>{{ end }}
             {{ with .Site.Params.inc.portfolio_link }}<a href="{{ . }}">Portfolio</a>{{ end }}
             {{ with .Site.Params.inc.about_link }}<a href="{{ . }}">About</a>{{ end }}
