m:Moved Vint / Pinterest to projects folder. Updated portfolio page with summary / vertical aligned photos.

--- a/layouts/section/portfolio.html
+++ b/layouts/section/portfolio.html
@@ -3,7 +3,7 @@
 	<div class="container">
         </br>
         <div class="row">
-        {{ range .Data.Pages }}
+        {{ range .Data.Pages.ByTitle }}
             {{ .Render "thumbnail"}}
         {{ end }}
         </div>
