--- a/layouts/portfolio/thumbnail.html
+++ b/layouts/portfolio/thumbnail.html
@@ -1,11 +1,13 @@
 <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
-    <div class="thumbnail">
+    <div class="thumbnail imgWrap">
         <a href="../projects/{{ .Params.bloglink }}">
 			<div class="image-container">
 				<span class="image-container-helper"></span>
 		        <img src="{{ .Params.thumbnail }}"/>
 		    </div>
         </a>
-		{{ .Params.blogsummary }}        
+        <p class="imgDescription">
+			<span class="imgDescCenterV">{{ .Params.blogsummary }}</span>        
+		</p>
     </div>
 </div>
