--- a/static/css/paige.css
+++ b/static/css/paige.css
@@ -39,3 +39,45 @@
   text-align: center;
   transform: translateY(-40px);
  }
+
+ .imgWrap {
+  position: relative;
+  height: 200px;
+  width: 257px;
+}
+
+.imgDescription {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.72);
+  color: #fff;
+
+
+  visibility: hidden;
+  opacity: 0;
+
+  text-align: center;
+
+  /*remove comment if you want a gradual transition between states
+  -webkit-transition: visibility opacity 0.2s;
+  */
+  height: 200px;
+  line-height: 200px;
+}
+
+
+.imgWrap:hover .imgDescription {
+  visibility: visible;
+  opacity: 1;
+}
+
+.imgDescCenterV {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;      
+}
+}
+
