--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     
+<div class="fixedheader">
 <section class="site-nav">
     <header>
         <nav id="navigation">
@@ -35,4 +36,4 @@
         </nav>
     </header>
 </section>
-
+</div>
