--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ partial "header.html" . }}
+<div class="fixedcontent">
 {{ if isset .Params "cover_image" }}
 <div class="article-cover">
     <div>
@@ -31,3 +32,4 @@
 </article>
 
 {{ partial "footer.html" . }}
+</div>
