--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,5 @@
 {{ partial "header.html" . }}
+<div class="fixedcontent">
 <div class="site-index-top-spacer"></div>
 <div class="blog-cover" style="background-image:url(/images/{{ .Site.Params.inc.cover_image }});">
     
@@ -20,4 +21,5 @@
         </div>
     </section>
 </div>
-{{ partial "footer.html" . }}
+{{ partial "footer_first.html" . }}
+</div>
