--- a/layouts/section/portfolio.html
+++ b/layouts/section/portfolio.html
@@ -1,5 +1,6 @@
 {{ partial "header.html" . }}
 
+<div class="fixedcontent">
 	<div class="container">
         </br>
         <div class="row">
@@ -10,3 +11,4 @@
     </div>
   <br>
 {{ partial "footer.html" . }}
+</div>
