--- a/static/css/paige.css
+++ b/static/css/paige.css
@@ -79,5 +79,61 @@
   vertical-align: middle;
   line-height: normal;      
 }
+
+.fixedheader
+{
+    height:50px;
+}
+.fixedcontent
+{
+    position:absolute;
+    top: 50px;
+    left:0px;
+    right:0px;
+    bottom:0px;
+    overflow-y:scroll;        
+}​
+
+.darkbackground {
+  background: #33000000;
 }
 
+.footer-container {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  width: 190px;;
+}
+
+    .blog-cover-footer a {
+      color: #fff;
+      border: 0;
+      width: 36px;
+      height: 36px;
+      border: 2px solid white;
+      display: inline-block;
+      padding: 10px 0;
+      border-radius: 42px;
+      margin: 1.5em 1em 0em 0;
+      transition: 0.2s all ease;
+      line-height: 0;
+      text-align: center; 
+    }
+      .blog-cover-footer a:hover {
+        transition: 0.2s all ease;
+        background: #fff; }
+        .blog-cover-footer  a:hover .icon-rss {
+          background-position: 1px -11px; }
+        .blog-cover-footer a:hover .icon-twitter {
+          background-position: 0px -15px; }
+        .blog-cover-footer a:hover .icon-facebook {
+          background-position: 0px -14px; }
+        .blog-cover-footer a:hover .icon-github {
+          background-position: 0px -15px; }
+        .blog-cover-footer a:hover .linkedinicon {
+          fill: #000000;
+        }
+
+.site-footer-dark {
+    background-color: rgba(0, 0, 0, 0.33)
+}
