--- a/layouts/portfolio/thumbnail.html
+++ b/layouts/portfolio/thumbnail.html
@@ -1,3 +1,4 @@
+<!--
 <div class="col-sm-6 col-md-4" style="padding-bottom:1em;">
     <a href="../projects/{{ .Params.bloglink }}">
     <div class="thumbnail imgWrap">
@@ -11,3 +12,20 @@
     </div>
     </a>
 </div>
+-->
+
+<div class="col-md-4 col-sm-6 portfolio-item">
+    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+        <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+                <i class="fa fa-plus fa-3x"></i>
+            </div>
+        </div>
+        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+    </a>
+    <div class="portfolio-caption">
+        <h4>Round Icons</h4>
+        <p class="text-muted">Graphic Design</p>
+    </div>
+</div>
+
