--- a/layouts/projects/projects.html
+++ b/layouts/projects/projects.html
@@ -1,4 +1,8 @@
+[[before<br/>
+{{ .Params }}
 {{ .Params.modallink }}
-{{ .Params.date }}
+{{ .Params.modallink }}
+{{ .Params.title }}
 more stuff 
+d{{ .Params.modallink }}
 <br/>
