Fixed up layout files - do not edit in sublime

--- a/layouts/projects/projects.html
+++ b/layouts/projects/projects.html
@@ -1,7 +1,7 @@
 [[before<br/>
 {{ .Params }}
 {{ .Params.modallink }}
-{{ .Params.modallink }}
+{{ .Title }}
 {{ .Params.title }}
 more stuff 
 d{{ .Params.modallink }}
