--- a/layouts/projects/projects.html
+++ b/layouts/projects/projects.html
@@ -1,8 +1,25 @@
-[[before<br/>
-{{ .Params }}
-{{ .Params.modallink }}
-{{ .Title }}
-{{ .Params.title }}
-more stuff 
-d{{ .Params.modallink }}
-<br/>
+<div class="portfolio-modal modal fade" id="{{ .Params.modallink }}" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <!-- Project Details Go Here -->
+                        <h2>{{ .Title }}</h2>
+                        <p class="item-intro text-muted">{{ .Params.subtitle }}</p>
+
+                        {{ .Content }}
+
+                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
