--- a/themes/custom-theme/layouts/_default/single.html
+++ b/themes/custom-theme/layouts/_default/single.html
@@ -1,5 +1,81 @@
-single
-{{ .Params }}
-<br/>
-Title: {{ .Title }}
-<br/>
+{{ partial "head.html" . }}
+
+<body id="page-top" class="index">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Paige Bennett</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="/#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#contact">Say Hi / Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+<div class="fixedcontent">
+{{ if isset .Params "cover_image" }}
+<div class="article-cover">
+    <div>
+        <img src="/images/{{ .Params.cover_image }}" class="image">
+    </div>
+</div>
+{{ end }}
+<article>
+
+    <div class="container">
+        <header>
+            <div class="meta">
+                <time pubdate datetime="{{ .Date.Format "2006-01-02" }}" title="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "January 02, 2006" }}</time>
+            </div>
+            <h1 class="title">{{ .Title }}</h1>
+            <h2 class="subtitle">{{ .Description }}</h2>
+        </header>
+
+        <section>
+            {{ .Content }}
+            {{ partial "_social.html" . }}
+        </section>
+
+        {{ with .Site.Params.inc.disqus.shortname }}
+        <section>
+            {{ partial "_disqus.html" . }}
+        </section>
+        {{ end }}
+    </div>
+</article>
+</div>
+
+{{ partial "footer.html" . }}
+
+
+{{ partial "tail.html" .}}
+
+</body>
+
+</html>
