--- a/themes/custom-theme/layouts/index.html
+++ b/themes/custom-theme/layouts/index.html
@@ -31,6 +31,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Say Hi / Contact</a>
                     </li>
+                    <li>
+                        <a href="/blog">Blog</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -119,3 +122,12 @@
     {{ end }}
 
 {{ partial "tail.html" .}}
+
+    <script src="/js/cbpAnimatedHeader.js"></script>
+
+
+</body>
+
+</html>
+
+
