--- a/themes/custom-theme/layouts/index.html
+++ b/themes/custom-theme/layouts/index.html
@@ -29,7 +29,7 @@
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Say Hi / Contact</a>
+                        <a class="page-scroll" href="#contact">Say Hi</a>
                     </li>
                     <li>
                         <a href="/blog">Blog</a>
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Drop me a line. I'd love to connect!</h3>
                 </div>
             </div>
             <div class="row text-center">
