Updated spot on projects and fixed css to give all portfolio items the same height

--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -403,6 +403,7 @@ section h3.section-subheading {
     max-width: 400px;
     text-align: center;
     background-color: #fff;
+    height: 155px;
 }
 
 #portfolio .portfolio-item .portfolio-caption h4 {
