--- a/themes/custom-theme/static/css/agency.css
+++ b/themes/custom-theme/static/css/agency.css
@@ -403,6 +403,7 @@ section h3.section-subheading {
     max-width: 400px;
     text-align: center;
     background-color: #fff;
+    height: 155px;
 }
 
 #portfolio .portfolio-item .portfolio-caption h4 {
