--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -773,6 +773,10 @@ ul.social-buttons li a:active {
     text-align: left;
 }
 
+.modal-body li {
+    text-align: left;
+}
+
 .portfolio-modal .modal-content {
     padding: 100px 0;
     min-height: 100%;
