--- a/themes/custom-theme/layouts/_default/single.html
+++ b/themes/custom-theme/layouts/_default/single.html
@@ -49,7 +49,7 @@
 <article>
 
     <div class="container">
-        <header>
+        <header class="single-header">
             <div class="meta">
                 <time pubdate datetime="{{ .Date.Format "2006-01-02" }}" title="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "January 02, 2006" }}</time>
             </div>
