--- a/themes/custom-theme/layouts/_default/list.html
+++ b/themes/custom-theme/layouts/_default/list.html
@@ -41,7 +41,7 @@
         <!-- /.container-fluid -->
     </nav>
 
-<div class="fixedcontent">
+<div class="fixedcontent" style="margin-top: 100px;">
 	<article class="container">
 	  {{ range .Data.Pages }}
 	    {{ .Render "summary" }}
