--- a/themes/custom-theme/layouts/_default/single.html
+++ b/themes/custom-theme/layouts/_default/single.html
@@ -57,7 +57,7 @@
             <h2 class="subtitle">{{ .Description }}</h2>
         </header>
 
-        <section>
+        <section style="margin-top: 30px;">
             {{ .Content }}
         </section>
 
