Adds lightbox for second time

--- a/themes/custom-theme/layouts/partials/tail.html
+++ b/themes/custom-theme/layouts/partials/tail.html
@@ -12,5 +12,8 @@
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/contact_me.js"></script>
 
+    <!-- lightbox 2 -->
+    <script src="/js/lightbox.min.js"></script>
+
     <!-- Custom Theme JavaScript -->
     <script src="/js/agency.js"></script>
