--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -60,6 +60,10 @@ h6 {
     margin: 0 auto;
 }
 
+.img-responsive-small {
+    max-width: 50%;
+}
+
 .bg-light-gray {
     background-color: #f7f7f7;
 }
