--- a/themes/custom-theme/layouts/_default/single.html
+++ b/themes/custom-theme/layouts/_default/single.html
@@ -13,14 +13,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Paige Bennett</a>
+                <a class="navbar-brand page-scroll" href="/">Paige Bennett</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="/#page-top"></a>
+                        <a href="/"></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/#about">About</a>
