Updated header image

--- a/themes/custom-theme/layouts/index.html
+++ b/themes/custom-theme/layouts/index.html
@@ -42,7 +42,7 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header style="background-image: url(../img/front-page-cover.jpg);">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">{{  .Site.Params.header.lead_in }}</div>
