--- a/themes/custom-theme/layouts/_default/summary.html
+++ b/themes/custom-theme/layouts/_default/summary.html
@@ -1,7 +1,7 @@
     <section class="index">
         {{ with .Params.authorimage }}<img src="/images/{{ . }}" class="avatar">{{ end }}
         <div>
-            <h2 class="title"><a href="{{ .RelPermalink }}" rel="prefetch">{{ .Title }}</a></h2>
+            <h2 class="title"><a href="{{ .Slug }}" rel="prefetch">{{ .Title }}</a></h2>
             {{ with .Description }}<h3>{{ . }}</h3>{{ end }}
             {{ if isset .Params "excerpt" }}
             <p>{{ .Params.excerpt }}</p>
