--- a/themes/custom-theme/layouts/index.html
+++ b/themes/custom-theme/layouts/index.html
@@ -54,12 +54,12 @@
         </div>
     </header>
 
-    <!-- Services Section -->
+    <!-- About Section -->
     <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
+                    <h2 class="section-heading">About</h2>
                     <h3 class="section-subheading text-muted">Drop me a line. I'd love to connect!</h3>
                 </div>
             </div>
