--- a/themes/custom-theme/layouts/partials/contact.html
+++ b/themes/custom-theme/layouts/partials/contact.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Contact Me</h2>
-                <h3 class="section-subheading text-muted"></h3>
+                <h2 class="section-heading">Contact</h2>
+                <h3 class="section-subheading text-muted" style="color: rgba(255, 255, 255, 0.7);">Drop me a line. I'd love to connect!</h3>
             </div>
         </div>
         <div class="row">
