--- a/themes/custom-theme/layouts/partials/footer.html
+++ b/themes/custom-theme/layouts/partials/footer.html
@@ -6,15 +6,13 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a>
+                    <li><a href="http://www.twitter.com/{{  .Site.Params.inc.twitter }}" target="_blank"><i class="fa fa-twitter"></i></a>
                     </li>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a>
+                    <li><a href="http://www.facebook.com/{{  .Site.Params.inc.facebook }}" target="_blank"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                    <li><a href="http://www.linkedin.com/in/{{  .Site.Params.inc.linkedin }}" target="_blank"><i class="fa fa-linkedin"></i></a>
                     </li>
-                    <li><a href="#"><i class="fa fa-github"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-tumblr"></i></a>
+                    <li><a href="http://www.github.com/{{  .Site.Params.inc.github }}" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                 </ul>
             </div>
