--- a/themes/custom-theme/layouts/index.html
+++ b/themes/custom-theme/layouts/index.html
@@ -101,9 +101,16 @@
                     <h3 class="section-subheading text-muted">{{  .Site.Params.portfolio.subtitle }}</h3>
                 </div>
             </div>
-            <div class="row">
-                {{ range where .Data.Pages.ByDate.Reverse "Section" "portfolio" }}
-                    {{ .Render "portfolio" }}
+                {{ range .Data.Pages.GroupByParam "category" "Section" "portfolio" }}
+                    <div class="row"> 
+                        <h3>{{ .Key }}</h3>
+                    </div>
+
+                    <div class="row"> 
+                        {{ range .Pages }}
+                            {{ .Render "portfolio" }}
+                        {{ end }}
+                    </div>
                 {{ end }}
             </div>
         </div>
