--- a/themes/custom-theme/layouts/index.html
+++ b/themes/custom-theme/layouts/index.html
@@ -95,15 +95,21 @@
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
-            <div class="row">
+            <div class="row" style="margin-bottom: -60px;">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">{{  .Site.Params.portfolio.title }}</h2>
                     <h3 class="section-subheading text-muted">{{  .Site.Params.portfolio.subtitle }}</h3>
                 </div>
             </div>
-                {{ range .Data.Pages.GroupByParam "category" "Section" "portfolio" }}
+                {{ range (.Data.Pages.GroupByParam "portfolio_group" "Section" "portfolio").Reverse }}
                     <div class="row"> 
-                        <h3>{{ .Key }}</h3>
+                        {{ if eq .Key "ux" }}
+                            <h2 class="portolio-secion-text-center">UI/UX Project</h2>
+                        {{ else if eq .Key "research" }}
+                            <h2 class="portolio-secion-text-center">User Research</h2>
+                        {{ else }}
+                            <h2 class="portolio-secion-text-center">Other</h2>
+                        {{ end }}
                     </div>
 
                     <div class="row"> 
