--- a/themes/custom-theme/static/css/agency.css
+++ b/themes/custom-theme/static/css/agency.css
@@ -25,6 +25,11 @@ body {
     font-style: italic;
 }
 
+.portolio-secion-text-center {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 p {
     font-size: 14px;
     line-height: 1.75;
